# project-boilerplate

./: .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: software_design_specification.md
infrastructure/: telemetry.py
presentation/: app.py
tests/: test_sample.py
